created dataproviderparctice class in practice package with initial straightforward practice on @DataProvider concepts